# nmh

./: .cvsignore  .gitignore  COMPLETION-TCSH  COPYRIGHT  ChangeLog  ChangeLog_MH-3_to_MH-6.6  ChangeLog_MH-6.7.0_to_MH-6.8.4.html  DATE  DIFFERENCES  FAQ  INSTALL  MACHINES  Makefile.am  Makefile.in  NEWS  README  README-ATTACHMENTS  README.developers  TODO  VERSION  ZSH.COMPLETION  acconfig.h  aclocal.m4  autogen.sh  build_nmh  config.guess  config.h.in  config.sub  configure  configure.ac  configure.in  cscope.files  guide  install-sh  nmh.spec  stamp-h.in
SPECS/: build-nmh-cygwin  nmh.cygport  nmh.spec
config/: .cvsignore  Makefile.in  config.c  version.sh
docs/: COMPLETION-BASH  COMPLETION-ZSH  ChangeLog  DIFFERENCES  FAQ  MACHINES  MAIL.FILTERING  MAILING-LISTS  Makefile.in  README-ATTACHMENTS  README-HOOKS  README-components  README-iCalendar  README.SASL  README.about  README.developers  README.manpages  TODO  pending-release-notes  pending-release-notes-tmp  replyfilter
docs/contrib/: build_nmh  localpostproc  ml  replaliases  replyfilter  sendfrom.c  vpick
docs/historical/: ADMIN-19910201.txt  ADMIN.txt  MH-19910201.txt  MH-19921214.txt  MH.txt  README  bboards.txt  beginners.txt  changes.txt  mh4mm.txt  mh6.txt  multifarious.txt  mznet.txt  realwork.txt  trusted.txt  tutorial.txt
etc/: .cvsignore  MailAliases  Makefile.in  bash_completion_nmh-gen  components  digestcomps  distcomps  forwcomps  gen-ctype-checked.c  mhical.12hour  mhical.24hour  mhl.format  mhl.forward  mhl.headers  mhl.reply  mhl.replywithoutbody  mhn.defaults.sh  mhn.find.sh  mhshow.header  mhshow.marker  mts.conf.in  rcvdistcomps  rcvdistcomps.outbox  replcomps  replgroupcomps  rmmproc.messageid  scan.MMDDYY  scan.YYYYMMDD  scan.curses  scan.default  scan.highlighted  scan.mailx  scan.nomime  scan.size  scan.time  scan.timely  scan.unseen  sendfiles  sendfiles.in
h/: Makefile.in  addrsbr.h  aliasbr.h  crawl_folders.h  done.h  dropsbr.h  fmt_compile.h  fmt_scan.h  icalendar.h  m_setjmp.h  md5.h  mf.h  mh.h  mhcachesbr.h  mhparse.h  mime.h  msh.h  mts.h  netdb.h  netsec.h  nmh.h  nntp.h  oauth.h  picksbr.h  popsbr.h  prototypes.h  rcvmail.h  scansbr.h  signals.h  tws.h  utils.h  vmhsbr.h
m4/: cppflags.m4  iconv.m4  locking.m4  mimetype.m4  ndbm.m4  netlibs.m4  readline.m4  tputs.m4
man/: .cvsignore  MH.man  Makefile.in  ali.man  anno.man  ap.man  burst.man  comp.man  conflict.man  dist.man  dp.man  flist.man  flists.man  fmtdump.man  fmttest.man  fnext.man  folder.man  folders.man  forw.man  inc.man  install-mh.man  mark.man  mh-alias.man  mh-chart-gen.sh  mh-chart.man  mh-draft.man  mh-folders.man  mh-format.man  mh-mail.man  mh-mime.man  mh-mkstemp.man  mh-mts.man  mh-profile.man  mh-sequence.man  mh-tailor.man  mh_profile.man  mhbuild.man  mhfixmsg.man  mhical.man  mhl.man  (+38 more)
mts/: Makefile.in
mts/generic/: Makefile.in  mts.c
mts/mmdf/: Makefile.in  hosts.c
mts/sendmail/: Makefile.in  hosts.c  sendmail.c
mts/smtp/: Makefile.in  hosts.c  smtp.c  smtp.h
sbr/: .cvsignore  Makefile.in  add.c  addrparse.y  addrsbr.c  ambigsw.c  ambigsw.h  arglist.c  arglist.h  atooi.c  atooi.h  base64.c  base64.h  brkstring.c  brkstring.h  charstring.c  check_charset.c  check_charset.h  client.c  client.h  closefds.c  closefds.h  concat.c  concat.h  context_del.c  context_del.h  context_find.c  context_find.h  context_foil.c  context_foil.h  context_read.c  context_read.h  context_replace.c  context_replace.h  context_save.c  context_save.h  copy.c  copyip.c  copyip.h  cpydata.c  (+200 more)
test/: .cvsignore  README  cleanup  common.sh  common.sh.in  fakehttp.c  fakepop.c  fakesendmail  fakesmtp.c  getcanon.c  getcwidth.c  getfqdn.c  getfullname.c  runalltests  runpty.c  runtest  server.c  setup-test  teardown-test  test-temp-dir  valgrind.supp
test/ali/: test-ali
test/anno/: test-anno
test/bad-input/: malformed_message.txt  test-header
test/burst/: test-burst  test-burst-mime
test/comp/: test-comp-format
test/folder/: test-coverage  test-create  test-nocreate  test-packf  test-recurse  test-sortm  test-total
test/format/: test-ap  test-curses  test-dp  test-fmtdump  test-fmttest  test-functions  test-localmbox  test-myhost  test-mymbox  test-myname  test-nullstr  test-rightjustify  test-unquote
test/forw/: test-forw-coverage  test-forw-digest  test-forw-format
test/inc/: lots_of_headers.txt  malformed_message.txt  md5sums  msgheader.txt  test-deb359167  test-eom-align  test-inc-scanout  test-msgchk  test-pop
test/install-mh/: test-install-mh  test-version-check
test/locking/: test-datalocking  test-spoollocking
test/manpages/: test-manpages
test/mhbuild/: somebinary  test-attach  test-cte  test-ext-params  test-forw  test-header-encode  test-mhbuild  test-utf8-body  textplain
test/mhfixmsg/: test-mhfixmsg
test/mhical/: test-mhical
test/mhl/: test-format  test-mhl-flags  test-rfc6532
test/mhlist/: test-ext-params  test-mhlist
test/mhmail/: attachment.txt  test-mhmail
test/mhparam/: test-mhparam  test-profile
test/mhpath/: test-mhpath
test/mhshow/: test-binary  test-charset  test-cte-binary  test-exec  test-markers  test-msg-buffer-boundaries  test-qp  test-subpart  test-textcharset
test/mhstore/: test-mhstore
test/mkstemp/: test-mkstemp
test/new/: test-basic
test/oauth/: common.sh  test-inc  test-mhlogin  test-mhparam  test-send  test-sendfrom  test-share
test/pick/: test-pick  test-stderr
test/post/: test-messageid  test-mhmail  test-mts  test-pipe  test-post-aliases  test-post-basic  test-post-bcc  test-post-common.sh  test-post-dcc  test-post-envelope  test-post-fcc  test-post-group  (+5 more)
tools/: Doxygen  README  csa  showbuildenv
uip/: .cvsignore  Makefile.in  ali.c  aliasbr.c  anno.c  annosbr.c  annosbr.h  ap.c  attach.c  burst.c  comp.c  conflict  conflict.c  dist.c  distsbr.c  distsbr.h  dp.c  dropsbr.c  flist.c  fmtdump.c  fmttest.c  folder.c  forw.c  forwsbr.c  forwsbr.h  ftpsbr.c  imaptest.c  inc.c  install-mh.c  mark.c  md5.c  mhbuild.c  mhbuildsbr.c  mhcachesbr.c  mhfixmsg.c  mhfree.c  mhfree.h  mhical.c  mhl.c  mhlist.c  (+70 more)
zotnet/: Makefile.in
(+863 files in other folders)
